--- a/notebooks/predictor.ipynb
+++ b/notebooks/predictor.ipynb
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "705d1d1d",
    "metadata": {},
    "outputs": [
@@ -424,22 +424,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7988826815642458\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ravindrabisht/Desktop/Local/Projects/ML-Projects/titanic-survival-predictor/venv/lib/python3.13/site-packages/sklearn/linear_model/_logistic.py:470: ConvergenceWarning: lbfgs failed to converge after 100 iteration(s) (status=1):\n",
-      "STOP: TOTAL NO. OF ITERATIONS REACHED LIMIT\n",
-      "\n",
-      "Increase the number of iterations to improve the convergence (max_iter=100).\n",
-      "You might also want to scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
+      "Accuracy: 0.8100558659217877\n"
      ]
     }
    ],
@@ -454,11 +439,104 @@
     "\n",
     "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "model = LogisticRegression()\n",
+    "model = LogisticRegression(max_iter=200)\n",
     "model.fit(X_train, y_train)\n",
     "\n",
     "y_pred = model.predict(X_val)\n",
-    "\"Accuracy:\", accuracy_score(y_val, y_pred)"
+    "print(\"Accuracy:\", accuracy_score(y_val, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "a9d48927",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Pclass   Age  SibSp  Parch  Fare  Sex_male  Embarked_Q  Embarked_S\n",
+      "0       3  22.0      1      0  7.25      True       False        True\n",
+      "Predicted Survival: 0\n",
+      "Survival Probability: 0.09806160756329656\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select a sample passenger from X (first row)\n",
+    "sample_passenger = X.iloc[[0]]\n",
+    "print(sample_passenger)\n",
+    "\n",
+    "# Predict survival (1 = survived, 0 = did not)\n",
+    "prediction = model.predict(sample_passenger)\n",
+    "probability = model.predict_proba(sample_passenger)\n",
+    "\n",
+    "print(\"Predicted Survival:\", prediction[0]) \n",
+    "print(\"Survival Probability:\", probability[0][1]) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "741e523a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Pclass   Age  SibSp  Parch     Fare  Sex_male  Embarked_Q  Embarked_S\n",
+      "0         3  22.0      1      0   7.2500      True       False        True\n",
+      "4         3  35.0      0      0   8.0500      True       False        True\n",
+      "5         3  28.0      0      0   8.4583      True        True       False\n",
+      "6         1  54.0      0      0  51.8625      True       False        True\n",
+      "7         3   2.0      3      1  21.0750      True       False        True\n",
+      "..      ...   ...    ...    ...      ...       ...         ...         ...\n",
+      "883       2  28.0      0      0  10.5000      True       False        True\n",
+      "884       3  25.0      0      0   7.0500      True       False        True\n",
+      "886       2  27.0      0      0  13.0000      True       False        True\n",
+      "889       1  26.0      0      0  30.0000      True       False       False\n",
+      "890       3  32.0      0      0   7.7500      True        True       False\n",
+      "\n",
+      "[577 rows x 8 columns]\n",
+      "Predicted Survival: [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 1 0 0 0 0 0 0 0 0 0 0 1\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 1 0 0 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 0 0 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0\n",
+      " 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0\n",
+      " 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0]\n",
+      "Survival Probability: [[0.90193839 0.09806161]\n",
+      " [0.91039628 0.08960372]\n",
+      " [0.86006122 0.13993878]\n",
+      " ...\n",
+      " [0.75494822 0.24505178]\n",
+      " [0.42912811 0.57087189]\n",
+      " [0.87431125 0.12568875]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Select a sample passenger from X (first row)\n",
+    "male_passengers = X[X['Sex_male'] == 1]\n",
+    "print(male_passengers)\n",
+    "\n",
+    "# Predict survival (1 = survived, 0 = did not)\n",
+    "prediction = model.predict(male_passengers)\n",
+    "probability = model.predict_proba(male_passengers)\n",
+    "\n",
+    "print(\"Predicted Survival:\", prediction) \n",
+    "print(\"Survival Probability:\", probability) \n"
    ]
   }
  ],
