Add streamlit dashboard

--- a/notebooks/predictor.ipynb
+++ b/notebooks/predictor.ipynb
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "705d1d1d",
    "metadata": {},
    "outputs": [
@@ -432,6 +432,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
+    "import joblib\n",
     "\n",
     "# Prepare the data for training\n",
     "X = train_df.drop('Survived', axis=1)\n",
@@ -443,7 +444,9 @@
     "model.fit(X_train, y_train)\n",
     "\n",
     "y_pred = model.predict(X_val)\n",
-    "print(\"Accuracy:\", accuracy_score(y_val, y_pred))"
+    "print(\"Accuracy:\", accuracy_score(y_val, y_pred))\n",
+    "\n",
+    "joblib.dump(model, '../models/titanic_model.pkl')"
    ]
   },
   {
